--- a/page.css
+++ b/page.css
@@ -18,7 +18,7 @@
 
 body {
 	background-color: #270000;
-	background-image: url('img/wood.jpg');
+	background-image: url('img/wood.webp');
 	background-repeat: repeat;
 	overflow-y: scroll;
 }
