--- a/page.css
+++ b/page.css
@@ -15,6 +15,7 @@
 :root {
 	--accent-color: hsl(175, 30%, 41%);
 	--border-color: hsl(300, 100%, 60%);
+	--shaded: hsl(305, 65%, 15%);
 }
 
 body {
@@ -43,7 +44,7 @@ input[type=range]:focus-visible {
 
 input[type="range"]::-webkit-slider-runnable-track {
 	-webkit-appearance: none;
-	background: linear-gradient(to right, hsl(305, 65%, 6%), hsl(305, 65%, 15%));
+	background: linear-gradient(to right, hsl(305, 65%, 6%), var(--shaded));
 	border-radius:  11px 5px;
 	cursor: pointer;
 	height: 16px;
@@ -54,7 +55,7 @@ input[type="range"]:hover::-webkit-slider-runnable-track {
 }
 
 input[type="range"]::-moz-range-track {
-	background: linear-gradient(to right, hsl(305, 65%, 6%), hsl(305, 65%, 15%));
+	background: linear-gradient(to right, hsl(305, 65%, 6%), var(--shaded));
 	border-radius:  11px 5px;
 	cursor: pointer;
 	height: 16px;
@@ -87,6 +88,10 @@ input[type=range]::-moz-range-thumb {
 	cursor: pointer;
 }
 
+.btn-shaded {
+	background: var(--shaded);
+}
+
 .nav-pills .nav-link {
 	border-radius: 0;
 	font-family: Genos, sans-serif;
@@ -97,7 +102,7 @@ input[type=range]::-moz-range-thumb {
 
 .nav-pills .nav-link:not(.active) {
 	color: #808080;
-	background-color: hsl(305, 65%, 15%);
+	background-color: var(--shaded);
 }
 
 .nav-pills .nav-item:not(:last-child) {
