--- a/page.css
+++ b/page.css
@@ -112,6 +112,22 @@ input[type=range]::-moz-range-thumb {
 	font-size:  90%;
 }
 
+.visually-hidden {
+  position: absolute !important;
+  height: 1px;
+  width: 1px;
+  overflow: hidden;
+  clip: rect(1px, 1px, 1px, 1px);
+}
+
+input.visually-hidden:focus + label {
+  outline: thin dotted;
+}
+
+input.visually-hidden:focus-within + label {
+  outline: thin dotted;
+}
+
 .nav-pills .nav-link {
 	border-radius: 0;
 	font-family: Genos, sans-serif;
